UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/SterlingQuoteItem__c.object-meta.xml
<CustomObject>
    <description>Sterling Quote Item</description>
    <label>Quote Item</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>