UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Address_Lost__c.field-meta.xml
<CustomField>
    <fullName>Address_Lost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Lost</label>
    <type>Checkbox</type>
</CustomField>