UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Address_Lost_MRR__c.field-meta.xml
<CustomField>
    <fullName>Address_Lost_MRR__c</fullName>
    <formula>FTRWSAddress__r.Address_Lost_checkbox__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Lost MRR</label>
    <type>Checkbox</type>
</CustomField>