UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/AddressDescription__c.field-meta.xml
<CustomField>
    <fullName>AddressDescription__c</fullName>
    <label>Address Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>