UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Adjusted_MRC_Notes__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_MRC_Notes__c</fullName>
    <description>Notes added by the user when MRC is adjusted for wholesale</description>
    <label>Adjusted MRC Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>