UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/AdjustedMRC1__c.field-meta.xml
<CustomField>
    <fullName>AdjustedMRC1__c</fullName>
    <formula>AdjustedMRC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AdjustedMRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>