UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/AdjustedMRC__c.field-meta.xml
<CustomField>
    <fullName>AdjustedMRC__c</fullName>
    <label>Adjusted MRC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>