UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/AdjustedNRC__c.field-meta.xml
<CustomField>
    <fullName>AdjustedNRC__c</fullName>
    <label>Adjusted NRC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>