UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/ApprovalPriority__c.field-meta.xml
<CustomField>
    <fullName>ApprovalPriority__c</fullName>
    <label>Approval Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>