UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/ApprovalRegion__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRegion__c</fullName>
    <label>Approval Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ApprovalTerritory__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>Mid-Atlantic</fullName>
            </value>
            <value>
                <fullName>Midwest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>