UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/ApprovalRouting__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRouting__c</fullName>
    <label>ApprovalRouting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Build</fullName>
            </value>
            <value>
                <fullName>Customer Build - SMB Only</fullName>
            </value>
            <value>
                <fullName>Customer Build - Wireless</fullName>
            </value>
            <value>
                <fullName>Renewal / Special Pricing</fullName>
            </value>
            <value>
                <fullName>Renewal / Special Pricing - SMB Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>