UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/AT_T_MRC__c.field-meta.xml
<CustomField>
    <fullName>AT_T_MRC__c</fullName>
    <label>AT&amp;T MRC</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>