UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Average_MRC__c.field-meta.xml
<CustomField>
    <fullName>Average_MRC__c</fullName>
    <label>Average MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>