UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/BDT_Required__c.field-meta.xml
<CustomField>
    <fullName>BDT_Required__c</fullName>
    <description>Whether BDT is required for a given quote line item</description>
    <label>BDT Required</label>
    <length>10</length>
    <type>Text</type>
</CustomField>