UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/BuildingNumber__c.field-meta.xml
<CustomField>
    <fullName>BuildingNumber__c</fullName>
    <label>Building Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>