UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/CIAC__c.field-meta.xml
<CustomField>
    <fullName>CIAC__c</fullName>
    <label>CIAC</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>