UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/CircuitPriceQuoteId__c.field-meta.xml
<CustomField>
    <fullName>CircuitPriceQuoteId__c</fullName>
    <label>Circuit Price QuoteId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>