UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/circuitType__c.field-meta.xml
<CustomField>
    <fullName>circuitType__c</fullName>
    <description>Added for wholesale project, circuit type EVC or UNI  or  NNI</description>
    <label>Circuit Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>