UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Collector_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Collector_Allocation__c</fullName>
    <label>Collector Allocation</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>