UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Collector_BDT__c.field-meta.xml
<CustomField>
    <fullName>Collector_BDT__c</fullName>
    <label>Collector BDT</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>