UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Collector_Cost__c.field-meta.xml
<CustomField>
    <fullName>Collector_Cost__c</fullName>
    <label>Collector Cost</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>