UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Competitors_in_area__c.field-meta.xml
<CustomField>
    <fullName>Competitors_in_area__c</fullName>
    <label>Competitors in area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>