UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/CPE_Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>CPE_Gross_Margin__c</fullName>
    <label>CPE Gross Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>