UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/CPE_NRC_Price__c.field-meta.xml
<CustomField>
    <fullName>CPE_NRC_Price__c</fullName>
    <label>CPE NRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>