UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/CPQLineNumber__c.field-meta.xml
<CustomField>
    <fullName>CPQLineNumber__c</fullName>
    <label>CPQ Line Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>