UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/CRT__c.field-meta.xml
<CustomField>
    <fullName>CRT__c</fullName>
    <label>CRT</label>
    <length>14</length>
    <type>Text</type>
</CustomField>