UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/CS_LATA__c.field-meta.xml
<CustomField>
    <fullName>CS_LATA__c</fullName>
    <label>CS LATA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>