UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/CurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>CurrentStatus__c</fullName>
    <label>CurrentStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Pending - Business Decision Support</fullName>
            </value>
            <value>
                <fullName>Pending - Credit</fullName>
            </value>
            <value>
                <fullName>Pending - Engineering</fullName>
            </value>
            <value>
                <fullName>Pending - Engineering Wireless</fullName>
            </value>
            <value>
                <fullName>Pending - Engineering Wireless Final</fullName>
            </value>
            <value>
                <fullName>Pending - Finance</fullName>
            </value>
            <value>
                <fullName>Pending - INA</fullName>
            </value>
            <value>
                <fullName>Pending - INA Engineering</fullName>
            </value>
            <value>
                <fullName>Pending - Post Completion Audit Finance</fullName>
            </value>
            <value>
                <fullName>Pending - Post Completion Audit Originator</fullName>
            </value>
            <value>
                <fullName>Pending - Post Engineering Originator</fullName>
            </value>
            <value>
                <fullName>Pending - Post Engineering Originator Wireless</fullName>
            </value>
            <value>
                <fullName>Pending - Regional President</fullName>
            </value>
            <value>
                <fullName>Pending - Sales Engineering</fullName>
            </value>
            <value>
                <fullName>Pending - Sales Engineering Manager</fullName>
            </value>
            <value>
                <fullName>Pending - Site Verification</fullName>
            </value>
            <value>
                <fullName>Pending - State VP</fullName>
            </value>
            <value>
                <fullName>Pending - Wireless Management</fullName>
            </value>
            <value>
                <fullName>Pending - SVP Approval</fullName>
            </value>
            <value>
                <fullName>Pending - RSM Approval</fullName>
            </value>
            <value>
                <fullName>Pending Ready for Review</fullName>
            </value>
            <value>
                <fullName>Pending AE Update</fullName>
            </value>
            <value>
                <fullName>Pending - ICB</fullName>
            </value>
            <value>
                <fullName>Pending - Pricing</fullName>
            </value>
            <value>
                <fullName>Pending - Product</fullName>
            </value>
            <value>
                <fullName>Pending Final Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>