UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/CVD_Source__c.field-meta.xml
<CustomField>
    <fullName>CVD_Source__c</fullName>
    <label>CVD Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>