UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/cvdPriceTier__c.field-meta.xml
<CustomField>
    <fullName>cvdPriceTier__c</fullName>
    <label>CVD Rate Tier</label>
    <length>3</length>
    <type>Text</type>
</CustomField>