UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Cvdrates_Id__c.field-meta.xml
<CustomField>
    <fullName>Cvdrates_Id__c</fullName>
    <label>Cvdrates Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>