UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/cvdratesource__c.field-meta.xml
<CustomField>
    <fullName>cvdratesource__c</fullName>
    <label>CVD Rate Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>