UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Direct_Individual_CS_Cost__c.field-meta.xml
<CustomField>
    <fullName>Direct_Individual_CS_Cost__c</fullName>
    <label>Direct Individual CS Cost</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>