UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/DiscountType__c.field-meta.xml
<CustomField>
    <fullName>DiscountType__c</fullName>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SVP</fullName>
            </value>
            <value>
                <fullName>RSM</fullName>
            </value>
            <value>
                <fullName>ICB</fullName>
            </value>
            <value>
                <fullName>CTR</fullName>
            </value>
            <value>
                <fullName>BDT</fullName>
            </value>
            <value>
                <fullName>ICBA</fullName>
            </value>
            <value>
                <fullName>CTRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>