UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Display_MRC__c.field-meta.xml
<CustomField>
    <fullName>Display_MRC__c</fullName>
    <description>Wholesale display MRC field</description>
    <formula>IF(StandardMRC__c!=0, &quot;$&quot;&amp;TEXT(StandardMRC__c), &quot;$0.00&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display MRC</label>
    <type>Text</type>
</CustomField>