UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Display_NRC__c.field-meta.xml
<CustomField>
    <fullName>Display_NRC__c</fullName>
    <description>Wholesale Display NRC field</description>
    <formula>IF(StandardNRC__c!=0, &quot;$&quot;&amp;TEXT(StandardNRC__c), &quot;$0.00&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display NRC</label>
    <type>Text</type>
</CustomField>