UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Display_Term__c.field-meta.xml
<CustomField>
    <fullName>Display_Term__c</fullName>
    <formula>CASE(TermLength__c , 0, &apos;MTM&apos;,  TEXT(TermLength__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Term</label>
    <type>Text</type>
</CustomField>