UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/DSAT_AddressID__c.field-meta.xml
<CustomField>
    <fullName>DSAT_AddressID__c</fullName>
    <label>DSAT ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>