UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/DSAT_Copper_Tier__c.field-meta.xml
<CustomField>
    <fullName>DSAT_Copper_Tier__c</fullName>
    <description>DSAT Copper tier for a given service address of the quote line item</description>
    <label>DSAT Copper Tier</label>
    <length>5</length>
    <type>Text</type>
</CustomField>