UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/DSAT_Fiber_Tier__c.field-meta.xml
<CustomField>
    <fullName>DSAT_Fiber_Tier__c</fullName>
    <description>DSAT Fiber tier for a given service address at the quote line item.</description>
    <label>DSAT Fiber Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>