UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Fiber_Distance__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Distance__c</fullName>
    <label>Fiber Distance</label>
    <length>20</length>
    <type>Text</type>
</CustomField>