UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/FloorPrice__c.field-meta.xml
<CustomField>
    <fullName>FloorPrice__c</fullName>
    <label>Floor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>