UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/FOTS__c.field-meta.xml
<CustomField>
    <fullName>FOTS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if a quote line item discounted belongs to FOTS category</description>
    <label>FOTS</label>
    <type>Checkbox</type>
</CustomField>