UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/FTRWSAddress__c.field-meta.xml
<CustomField>
    <fullName>FTRWSAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FTRWSAddress</label>
    <referenceTo>FTRWSAddress__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>Quote_Items</relationshipName>
    <type>Lookup</type>
</CustomField>