UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Guardrail_Cost__c.field-meta.xml
<CustomField>
    <fullName>Guardrail_Cost__c</fullName>
    <label>Guardrail Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>