UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/ICB_Comments__c.field-meta.xml
<CustomField>
    <fullName>ICB_Comments__c</fullName>
    <label>ICB Comments</label>
    <length>225</length>
    <type>Text</type>
</CustomField>