UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/ICB_Request__c.field-meta.xml
<CustomField>
    <fullName>ICB_Request__c</fullName>
    <description>ICB / BDT Request #</description>
    <label>ICB Request</label>
    <length>25</length>
    <type>Text</type>
</CustomField>