UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Interconnect_CLLI__c.field-meta.xml
<CustomField>
    <fullName>Interconnect_CLLI__c</fullName>
    <label>Interconnect CLLI</label>
    <length>20</length>
    <type>Text</type>
</CustomField>