UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/isCTR__c.field-meta.xml
<CustomField>
    <fullName>isCTR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCTR</label>
    <type>Checkbox</type>
</CustomField>