UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/IsInFrontierFootprint__c.field-meta.xml
<CustomField>
    <fullName>IsInFrontierFootprint__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IsInFrontierFootprint</label>
    <type>Checkbox</type>
</CustomField>