UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/IsNewConstruction__c.field-meta.xml
<CustomField>
    <fullName>IsNewConstruction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is New Construction</label>
    <type>Checkbox</type>
</CustomField>