UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/IsPromoProduct__c.field-meta.xml
<CustomField>
    <fullName>IsPromoProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Promo Product</label>
    <type>Checkbox</type>
</CustomField>