UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/ItemCode__c.field-meta.xml
<CustomField>
    <fullName>ItemCode__c</fullName>
    <defaultValue>&apos;0000&apos;</defaultValue>
    <label>Item Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>