UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/ItemOwner__c.field-meta.xml
<CustomField>
    <fullName>ItemOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ItemOwner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quote_Items_del1</relationshipName>
    <type>Lookup</type>
</CustomField>