UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Jeopardy__c.field-meta.xml
<CustomField>
    <fullName>Jeopardy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jeopardy</label>
    <type>Checkbox</type>
</CustomField>