UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Latency_Odd_Side_2way_in_ms__c.field-meta.xml
<CustomField>
    <fullName>Latency_Odd_Side_2way_in_ms__c</fullName>
    <label>Latency Odd Side 2way in ms</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>