UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Major_Product__c.field-meta.xml
<CustomField>
    <fullName>Major_Product__c</fullName>
    <formula>Products__r.MajorProduct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Major Product</label>
    <type>Checkbox</type>
</CustomField>