UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/MajorLine__c.field-meta.xml
<CustomField>
    <fullName>MajorLine__c</fullName>
    <label>Major Line #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>