UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/Max_QOS__c.field-meta.xml
<CustomField>
    <fullName>Max_QOS__c</fullName>
    <description>Max QOS from DSAT for a given service address of the quote line item.</description>
    <label>Max QOS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>