UCF-APR2.4/ftr main/force-app/main/default/objects/SterlingQuoteItem__c/fields/MinorLine__c.field-meta.xml
<CustomField>
    <fullName>MinorLine__c</fullName>
    <label>Minor Line #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>